# stream-setup

./: .editorconfig  .gitignore  LICENSE
.github/workflows/: elixir-ci.yml  python-ci.yml
alfred/: .gitignore  README.md  mix.exs
alfred/assets/css/: app.css
alfred/assets/js/: app.js
alfred/config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
alfred/lib/: alfred.ex  alfred_web.ex
alfred/lib/alfred/: application.ex  auth.ex  chat.ex  commands.ex  core.ex  org_parser.ex  repo.ex
alfred/lib/alfred/chat/: connection_handler.ex  message_handler.ex
alfred/lib/alfred/commands/: command.ex
alfred/lib/alfred/core/: config_param.ex
alfred/lib/alfred/services/: flag_gen_server.ex  git.ex  spotify.ex
alfred/lib/alfred/twitch/: rewards_handler.ex
alfred/lib/alfred/workers/: flag_gen_server.ex  git.ex  obs.ex  spotify.ex  twitch.ex  twitch_events.ex  voice.ex
alfred/lib/alfred_web/: endpoint.ex  gettext.ex  router.ex  session_plug.ex  telemetry.ex
alfred/lib/alfred_web/channels/: emacs_channel.ex  user_socket.ex
alfred/lib/alfred_web/controllers/: auth_controller.ex  command_controller.ex  overlay_controller.ex  page_controller.ex  spotify_controller.ex  twitch_controller.ex
alfred/lib/alfred_web/live/: admin_live.ex  admin_live.html.heex  overlay_live.ex  (+1 more)
alfred/priv/repo/: seeds.exs
alfred/test/: test_helper.exs
alfred/test/alfred/: commands_test.exs  core_test.exs
alfred/test/support/: channel_case.ex  conn_case.ex  data_case.ex
cheapdeck/: README.md  app.py  pyproject.toml  requirements.txt
emacs/: streaming-mode.el  ws-tools.el
(+36 files in other folders)
