[project]
name = "cheapdeck"
version = "0.1.0"
description = "Cheap deck to handle OBS actions using websockets"
authors = [
    { name = "Erick Navarro", email = "erick@navarro.io" }
]
dependencies = [
    "pyusb>=1.2.1",
    "websockets>=12.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.rye.scripts]
start = { cmd = "python app.py", env = { "DYLD_LIBRARY_PATH" = "/opt/homebrew/lib" }}

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/cheapdeck"]
